# CSC417-homeworks

./: .gitignore  CMakeLists.txt  README.md
a1-mass-spring-1d/: CMakeLists.txt  README.md  main.cpp
a1-mass-spring-1d/include/: backward_euler.h  d2V_spring_particle_particle_dq2.h  dV_spring_particle_particle_dq.h  forward_euler.h  runge_kutta.h  symplectic_euler.h
a1-mass-spring-1d/shared/include/: visualization.h
a1-mass-spring-1d/shared/src/: visualization.cpp
a1-mass-spring-1d/src/: d2V_spring_particle_particle_dq2.cpp  dV_spring_particle_particle_dq.cpp
a2-mass-spring-3d/: CMakeLists.txt  README.md  main.cpp
a2-mass-spring-3d/include/: T_particle.h  V_gravity_particle.h  assemble_forces.h  assemble_stiffness.h  d2V_spring_particle_particle_dq2.h  dV_gravity_particle_dq.h  linearly_implicit_euler.h  mass_matrix_particles.h  pick_nearest_vertices.h
a2-mass-spring-3d/src/: T_particle.cpp  V_gravity_particle.cpp  V_spring_particle_particle.cpp  assemble_forces.cpp  assemble_stiffness.cpp  d2V_spring_particle_particle_dq2.cpp  dV_gravity_particle_dq.cpp  dV_spring_particle_particle_dq.cpp  fixed_point_constraints.cpp  mass_matrix_particles.cpp
a3-finite-elements-3d/: CMakeLists.txt  README.md  assignment_setup.h  main.cpp
a3-finite-elements-3d/include/: T_linear_tetrahedron.h  V_linear_tetrahedron.h  V_spring_particle_particle.h  assemble_forces.h  assemble_stiffness.h  d2V_linear_tetrahedron_dq2.h  d2psi_neo_hookean_dF2.h  d2psi_neo_hooken_dF2.h  dV_linear_tetrahedron_dq.h  dV_spring_particle_particle_dq.h  dphi_linear_tetrahedron_dX.h  dpsi_neo_hookean_dF.h  fixed_point_constraints.h  implicit_euler.h  linearly_implicit_euler.h  newtons_method.h  pick_nearest_vertices.h  psi_neo_hookean.h  quadrature_single_point.h
a3-finite-elements-3d/src/: T_linear_tetrahedron.cpp  V_linear_tetrahedron.cpp  V_spring_particle_particle.cpp  assemble_forces.cpp  assemble_stiffness.cpp  d2V_linear_tetrahedron_dq2.cpp  d2psi_neo_hookean_dF2.cpp  d2psi_neo_hooken_dF2.cpp  dV_linear_tetrahedron_dq.cpp  dV_spring_particle_particle_dq.cpp  dphi_linear_tetrahedron_dX.cpp  dpsi_neo_hookean_dF.cpp  mass_matrix_linear_tetrahedron.cpp  mass_matrix_mesh.cpp  pick_nearest_vertices.cpp  psi_neo_hookean.cpp
a4-cloth-simulation/: CMakeLists.txt  README.md  assignment_setup.h  main.cpp
a4-cloth-simulation/include/: T_cloth.h  V_membrane_corotational.h  V_spring_particle_particle.h  assemble_forces.h  assemble_stiffness.h  collision_detection_cloth_sphere.h  d2V_membrane_corotational_dq2.h  dV_cloth_gravity_dq.h  dV_membrane_corotational_dq.h  dV_spring_particle_particle_dq.h  dphi_cloth_triangle_dX.h  dsvd.h  linearly_implicit_euler.h  mass_matrix_mesh.h  (+2 more)
a5-rigid-bodies/: CMakeLists.txt  README.md  assignment_setup.h
a6-rigid-bodies-contact/: CMakeLists.txt  assignment_setup.h  main.cpp
data/: arma_6.ele  arma_6.node  armadillo.mtl
(+65 files in other folders)
